--- a/src/components/app/jump-button/jump-button.css
+++ b/src/components/app/jump-button/jump-button.css
@@ -1,9 +1,10 @@
 button {
   padding: 8px 24px;
-  min-width: 8em;
+  min-width: 6em;
   outline: 2.25px solid var(--toner);
   outline-offset: -2.25px;
   font-size: 16px;
+  min-height: 40px;
 }
 
 @media (pointer: coarse) and (max-width: 768px) {
