--- a/src/global.css
+++ b/src/global.css
@@ -307,6 +307,7 @@ textarea {
 button {
   color: inherit;
   padding: 8px;
+  box-sizing: border-box;
   display: flex;
   border-radius: 100vh;
   align-items: center;
@@ -540,10 +541,6 @@ input[type='range']:focus::-moz-range-thumb {
     height: 31px;
     border-radius: 31px;
     box-shadow: -419px 0 0 400px var(--ui);
-  }
-
-  button {
-    padding: 12px;
   }
 
   button:hover > span.hint,
